# sudoku

client/: package-lock.json  package.json
client/src/: App.vue  boards.js
client/src/components/: Board.vue  Cell.vue  ConnectPanel.vue  ScoreBoard.vue
server/: Cargo.toml
server/src/: boards.rs  main.rs
