[package]
name = "server"
version = "0.1.0"
authors = ["Alon Gal <alongalky@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rand = "0.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = "*"
env_logger = "0.6"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]